--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Brian Kiprotich <lagatbrayan@gmail.com>
-
+Mercy Mukiri <mwmukiri@gmail.com>
